fix: tweak the font size and spacing around the verified badge

--- a/src/css/components.scss
+++ b/src/css/components.scss
@@ -64,12 +64,11 @@ html#ov body {
         }
 
         .verifiedBadge {
-          font-size: $txMd;
+          font-size: 0.7rem;
           color: $col-bright;
           background-color: $col-secondary;
           border-radius: $pad2;
           padding: 0 $pad2;
-          margin-left: $pad2;
           vertical-align: middle;
         }
 
@@ -97,7 +96,11 @@ html#ov body {
           }
         }
 
-        @media (min-width: $mediaXs) {
+        @media (min-width: $mediaXs) {          
+          h1 {
+            margin-bottom: $pad1;
+          }
+          
           .details {
             .orgText {
               font-size: 0.7rem;
@@ -118,14 +121,17 @@ html#ov body {
           }
         }
 
+        @media (min-width: $mediaMd) {
+          .verifiedBadge {
+            margin-left: $pad1;
+            font-size: $txMd;
+          }
+        }
+
         @media (min-width: $mediaLg) {
 
           h1 {
             font-size: $h3;
-          }
-
-          .verifiedBadge {
-            font-size: $tx;
           }
 
           .details {
@@ -255,6 +261,12 @@ html#ov body {
 
             .orgText {
               font-size: $txMd;
+            }
+          }
+
+          @media (min-width: $mediaXs) {
+            h1 {
+              margin-bottom: $pad1;
             }
           }
 
